# railway-containers

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  package-lock.json  package.json  railway.toml  reqs.http
frontend/src/: app.html
frontend/src/components/: AddImageModal.svelte  AppHeader.svelte  FeatherIcon.svelte  Loading.svelte  ProjectList.svelte  RefreshButton.svelte
frontend/src/components/service/: DeleteModal.svelte  Deployment.svelte  Service.svelte
frontend/src/lib/: api.ts  converters.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/project/[id]/: +page.svelte
src/: handlers.rs  main.rs  tracing.rs
src/components/: AddImageModal.svelte  AppHeader.svelte  FeatherIcon.svelte  ProjectList.svelte  RefreshButton.svelte
src/components/service/: Deployment.svelte  DeploymentIcon.svelte  ServiceIcon.svelte
src/lib/: api.ts  index.ts  models.ts  queries.ts  stores.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/project/[id]/: +page.svelte
