[package]
name = "railway-containers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
actix-web-lab = { version = "0.20", features = ["spa"] }
actix-web-httpauth = "0.8"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "time",
] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
